--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -54,4 +54,39 @@
     <string name="next_level_message">You've advanced to the next level!</string>
     <string name="completion_message">Congratulations! You've completed all levels!</string>
     <string name="try_again_message">Let's try again!</string>
+    
+    <!-- Chords - Main Menu -->
+    <string name="chord_color_matching">Chord Color Matching</string>
+    <string name="mood_landscapes">Mood Landscapes</string>
+    <string name="chord_building">Chord Building</string>
+    <string name="missing_note">Guess the Missing Note</string>
+    <string name="chord_characters">Chord Story Characters</string>
+    <string name="harmony_gardens">Harmony Gardens</string>
+    
+    <!-- Chords - Color Matching Activity -->
+    <string name="chord_color_matching_title">Match Colors to Chords</string>
+    <string name="chord_color_matching_intro">Listen to the chord and select the color that matches how it sounds to you.</string>
+    <string name="play_chord">Play Chord</string>
+    
+    <!-- Chords - Mood Landscapes Activity -->
+    <string name="mood_landscapes_title">Chord Mood Landscapes</string>
+    <string name="mood_landscapes_intro">Different chord types create different feelings and landscapes. Play each chord to see how the landscape changes!</string>
+    
+    <!-- Chords - Chord Building Activity -->
+    <string name="chord_building_title">Build Your Own Chords</string>
+    <string name="chord_building_intro">Stack blocks to build different chords. Add each note to hear how the chord changes!</string>
+    
+    <!-- Chords - Missing Note Activity -->
+    <string name="missing_note_title">Find the Missing Note</string>
+    <string name="missing_note_intro">Listen to the incomplete chord and select which note is missing.</string>
+    <string name="play_incomplete_chord">Play Incomplete Chord</string>
+    
+    <!-- Chords - Character Matching Activity -->
+    <string name="chord_characters_title">Chord Characters</string>
+    <string name="character_matching_intro">Each chord type has its own personality! Listen to the chord and match it to the right character.</string>
+    
+    <!-- Chords - Harmony Gardens Activity -->
+    <string name="harmony_gardens_title">Harmony Gardens</string>
+    <string name="harmony_gardens_intro">Create a beautiful garden by choosing different chord sequences. Each chord type grows different plants!</string>
+    <string name="play_sequence">Play Sequence</string>
 </resources>
