- Alle Background-Bilder der activities sollen Lazy load bekommen
- im Browser global den back-button abfangen, da man im browser dann das spiel verlassen kann, oder falls das nicht geht, eine frage, ob mn die seite verlassen will
 - dies in android gesondert handeln: der back-button soll da zurück ins menu gehen, aber nur, wenn die navigation nicht gelockt ist.

1_5 does this sound right:
 - Bei jeder Melodie sollen neue Tiere kommen: selectRandomAnimalImages() reparieren
 - Manchmal zeigt er das falsche Lied an, die ton. Länger Stimmen noch nicht alle.

--- a/android/app/src/main/res/values-de/strings.xml
+++ b/android/app/src/main/res/values-de/strings.xml
@@ -113,4 +113,7 @@
     <string name="reset_progress">Fortschritt zurücksetzen</string>
     <string name="reset_progress_desc">Setze deinen gesamten Spielfortschritt zurück und starte neu:</string>
     <string name="reset_confirm">Bist du sicher? Dies kann nicht rückgängig gemacht werden.</string>
+
+    <!-- Back Button Messages -->
+    <string name="back_button_confirm_exit">Möchtest du die Seite wirklich verlassen? Dein Fortschritt dieser Sitzung könnte verloren gehen.</string>
 </resources>
