--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -113,6 +113,39 @@
     <string name="reset_progress">Reset Progress</string>
     <string name="reset_progress_desc">Reset all your game progress and start fresh:</string>
     <string name="reset_confirm">Are you sure? This cannot be undone.</string>
+    <string name="help_messages">Help Messages</string>
+    <string name="help_messages_desc">Control when mascot help messages appear:</string>
+    <string name="help_messages_off">Help Messages Hidden</string>
+    <string name="help_messages_on">Show Help Messages</string>
+    
+    <!-- Feedback Messages (from pitches.js) -->
+    <string name="memory_correct">Amazing memory! You got it right!</string>
+    <string name="memory_incorrect">Let\'s try again. Listen carefully!</string>
+    
+    <!-- Legal Pages Headers -->
+    <string name="credits_header">Credits</string>
+    <string name="impressum_header">Impress</string>
+    <string name="datenschutz_header">Privacy</string>
+    
+    <!-- Credits Content -->
+    <string name="version_label">Version</string>
+    <string name="app_development_label">App-Development</string>
+    <string name="graphics_label">Graphics &amp; Illustrations</string>
+    <string name="graphics_content">Images created with ChatGpt - mindfull, lovingly crafted prompts</string>
+    <string name="technologies_label">Technologies</string>
+    
+    <!-- Impressum Content -->
+    <string name="impressum_app_description">Lalumo App - Music learning for children</string>
+    <string name="impressum_responsible">Responsible for the content:</string>
+    <string name="impressum_contact">Ruben Barkow-Kuder&lt;br /&gt;Knickweg 16&lt;br /&gt;24114 Kiel</string>
+    
+    <!-- Datenschutz Content -->
+    <string name="privacy_intro">Privacy Policy for the Lalumo App</string>
+    <string name="privacy_statement">We take the protection of your personal data very seriously. We are not storing any personal data. All data is stored locally on your device and not transmitted to any server.</string>
+    <string name="privacy_local_storage_header">Local Storage</string>
+    <string name="privacy_local_storage_desc">The app stores the following locally on your device:</string>
+    <string name="privacy_username_item">Username</string>
+    <string name="privacy_progress_item">Learning Progress</string>
     
     <!-- High or Low Activity -->
     <string name="high_choice">High</string>
