--- a/android/app/src/main/res/values-de/strings.xml
+++ b/android/app/src/main/res/values-de/strings.xml
@@ -46,6 +46,7 @@
     <string name="draw_melody">Zeichne eine Melodie</string>
     <string name="create_melody">Erstelle eine Melodie</string>
     <string name="does_it_sound_right">Klingt es richtig?</string>
+    <string name="memory_game">Gedächtnis-Spiel</string>
     
     <!-- Success & Error Messages -->
     <string name="success_message">Sehr gut! Das ist richtig!</string>
