WIP - wenn in der localStorage der username gelockt ist, aber auf dem server gelöscht, dann muss der wieder entlockt werden und die localStorage aktualisiert werden

--- a/android/app/src/main/res/values-de/strings.xml
+++ b/android/app/src/main/res/values-de/strings.xml
@@ -110,6 +110,7 @@
     <string name="reset_progress">Fortschritt zurücksetzen</string>
     <string name="reset_progress_desc">Setze deinen gesamten Spielfortschritt zurück und starte neu:</string>
     <string name="reset_confirm">Bist du sicher? Dies kann nicht rückgängig gemacht werden.</string>
+    <string name="username_reset">Benutzername wurde erfolgreich zurückgesetzt!</string>
     <string name="help_messages">Hilf-Nachrichten</string>
     <string name="help_messages_desc">Steuere, wann Hilf-Nachrichten erscheinen:</string>
     <string name="help_messages_off">Hilf-Nachrichten aus</string>
